--- a/admin.html
+++ b/admin.html
@@ -5,21 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login - ETS</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="upload.css">
 </head>
 <body>
-    <div class="login-container">
-        <div class="login-box">
-            <h2 class="login-title">Admin Login</h2>
-            <form id="login-form">
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Login</button>
-            </form>
+    <nav class="navbar">
+        <div class="container">
+            <div class="nav-wrapper">
+                <div class="logo">ETS</div>
+                <ul class="nav-menu">
+                    <li><a href="index.html">Home</a></li>
+                </ul>
+            </div>
         </div>
+    </nav>
+    <div class="login-container">
+        <h2>Admin Login</h2>
+        <form action="admin_login.php" method="POST">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
     </div>
-    <script src="upload.js"></script>
 </body>
 </html>
