--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
-                <div class="logo">ETS</div>
+                <div class="logo"><img id="logo_img" src="src/img/logo.jpg" alt="logo" srcset=""></div>
                 <ul class="nav-menu">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="admin.html">Admin Login</a></li>
+                    <li><a href="#home">Ana Sayfa</a></li>
+                    <li><a href="#about">Hakkımızda</a></li>
+                    <li><a href="#services">Hizmetler</a></li>
+                    <li><a href="#portfolio">Projeler</a></li>
+                    <li><a href="#contact">İletişim</a></li>
                 </ul>
-                <button class="menu-toggle" aria-label="Toggle menu">
+                <button class="menu-toggle" aria-label="Menüyü Aç/Kapat">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -40,13 +39,13 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    <span class="title-line">Welcome to</span>
-                    <span class="title-main">Modern Web Solutions</span>
+                    <!-- <span class="title-line">Welcome to</span> -->
+                    <span class="title-main">ETS İNŞAAT</span>
                 </h1>
-                <p class="hero-subtitle">Creating beautiful, responsive, and user-friendly websites that drive results</p>
+                <p class="hero-subtitle">25 Yıllık tecrübe ile hizmetinizdeyiz</p>
                 <div class="hero-buttons">
-                    <a href="#contact" class="btn btn-primary">Get Started</a>
-                    <a href="#portfolio" class="btn btn-secondary">View Work</a>
+                    <a href="#contact" class="btn btn-primary">İletişim</a>
+                    <a href="#portfolio" class="btn btn-secondary">Çalışmalarımız</a>
                 </div>
             </div>
         </div>
@@ -59,27 +58,27 @@
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">About Us</h2>
-                <p class="section-subtitle">We are passionate about creating exceptional digital experiences</p>
+                <h2 class="section-title">Hakkımızda</h2>
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <h3>Our Mission</h3>
-                    <p>We specialize in building modern, responsive websites that combine beautiful design with powerful functionality. Our team is dedicated to delivering solutions that not only look great but also perform exceptionally well.</p>
-                    <p>With years of experience in web development, we understand what it takes to create websites that engage users and drive business growth.</p>
+                    <h3>Biz</h3>
+                    <p>2003 yılından bu yana. PVC doğrama montaji. sineklik, cam balkon ve çeşitli yapı ve dekorasyon çözümleri sunarak müşterilerimize kaliteli hizmet vermekteyiz Uzman ekibimizle.
+                        estetik ve dayanıklılığı bir araya getirerek, her projeyi titizlikle planlıyor ve uyguluyoruz
+                        Yılların verdiği deneyim ve güvenilirlik ile müşteri memnuniyetini en ön planda tutuyoruz Ister evinizde konfor ve şıklık arayışında olun, ister iş yerinizde güvenli ve modern çözümler arayın, her türlü ihtiyacınıza profesyonel bir yaklaşım sunmak için buradayız</p>
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
-                        <div class="stat-number">100+</div>
+                        <div class="stat-number">2000+</div>
                         <div class="stat-label">Projects Completed</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">50+</div>
-                        <div class="stat-label">Happy Clients</div>
+                        <div class="stat-number">25+</div>
+                        <div class="stat-label">Yıl tecrübe</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">5+</div>
-                        <div class="stat-label">Years Experience</div>
+                        <div class="stat-number">100%</div>
+                        <div class="stat-label">Mutluluk oranı</div>
                     </div>
                 </div>
             </div>
@@ -90,8 +89,8 @@
     <section id="services" class="services">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Our Services</h2>
-                <p class="section-subtitle">Comprehensive solutions tailored to your needs</p>
+                <h2 class="section-title">Ürünlerimiz</h2>
+                <p class="section-subtitle">Geniş ürün yelpazemiz ile hizmetinizdeyiz</p>
             </div>
             <div class="services-banner">
                 <div class="service-item" data-service="pvc">
@@ -248,90 +247,96 @@
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Our Portfolio</h2>
-                <p class="section-subtitle">Some of our recent work</p>
+                <h2 class="section-title">Portföyümüz</h2>
+                <p class="section-subtitle">Son Çalışmalarımız</p>
             </div>
-            <div class="portfolio-grid">
-                <div class="portfolio-item">
-                    <div class="portfolio-image">
-                        <div class="portfolio-overlay">
-                            <a href="#" class="portfolio-link">View Project</a>
-                        </div>
+            <div class="portfolio-grid" id="latest-projects"></div>
+        </div>
+    </section>
+    <script>
+    fetch('get_latest_projects.php')
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById('latest-projects').innerHTML = html;
+      });
+    </script>
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="testimonials">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Referanslarımız</h2>
+                <p class="section-subtitle">yazı yazı</p>
+            </div>
+            <div class="testimonial-slider-wrapper">
+                <button class="testimonial-slider-btn testimonial-slider-btn-prev" aria-label="Previous testimonial">&#8592;</button>
+                <div class="testimonials-grid testimonial-slider">
+                    <div class="testimonial-item">
+                        <img src="uploads/thumb_692c249fd5cbeScreenshot_1.png" alt="Company 1" class="testimonial-img">
+                        <h3 class="testimonial-name">Alpha Construction</h3>
+                        <p class="testimonial-text">"Modern Web Solutions exceeded our expectations on every level. We love our new website!"</p>
                     </div>
-                    <div class="portfolio-info">
-                        <h3>E-Commerce Platform</h3>
-                        <p>Modern shopping experience</p>
+                    <div class="testimonial-item">
+                        <img src="uploads/thumb_692c24eb8f90bScreenshot_1.png" alt="Company 2" class="testimonial-img">
+                        <h3 class="testimonial-name">Beta Interiors</h3>
+                        <p class="testimonial-text">"Professional, creative, and highly responsive. Our online presence has never looked better."</p>
+                    </div>
+                    <div class="testimonial-item">
+                        <img src="uploads/thumb_692c25d84ae86Screenshot_1.png" alt="Company 3" class="testimonial-img">
+                        <h3 class="testimonial-name">Gamma Windows</h3>
+                        <p class="testimonial-text">"Their work helped us attract new clients. Fast turn-around and impressive design."</p>
+                    </div>
+                    <div class="testimonial-item">
+                        <img src="uploads/thumb_692c25da27529Screenshot_1.png" alt="Company 4" class="testimonial-img">
+                        <h3 class="testimonial-name">Delta Roofing</h3>
+                        <p class="testimonial-text">"Very efficient and delivered a beautiful product within days. Highly recommend."</p>
+                    </div>
+                    <div class="testimonial-item">
+                        <img src="uploads/thumb_692c25dc014b9Screenshot_1.png" alt="Company 5" class="testimonial-img">
+                        <h3 class="testimonial-name">Epsilon Doors</h3>
+                        <p class="testimonial-text">"User-friendly site, great collaboration, and beautiful design. Thank you!"</p>
+                    </div>
+                    <div class="testimonial-item">
+                        <img src="uploads/thumb_692c25ddd9048Screenshot_1.png" alt="Company 6" class="testimonial-img">
+                        <h3 class="testimonial-name">Zeta Glass</h3>
+                        <p class="testimonial-text">"Impressive service and a stunning online showcase for our gallery."</p>
                     </div>
                 </div>
-                <div class="portfolio-item">
-                    <div class="portfolio-image">
-                        <div class="portfolio-overlay">
-                            <a href="#" class="portfolio-link">View Project</a>
-                        </div>
-                    </div>
-                    <div class="portfolio-info">
-                        <h3>Corporate Website</h3>
-                        <p>Professional business presence</p>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="portfolio-image">
-                        <div class="portfolio-overlay">
-                            <a href="#" class="portfolio-link">View Project</a>
-                        </div>
-                    </div>
-                    <div class="portfolio-info">
-                        <h3>Portfolio Site</h3>
-                        <p>Creative showcase</p>
-                    </div>
-                </div>
-                <div class="portfolio-item">
-                    <div class="portfolio-image">
-                        <div class="portfolio-overlay">
-                            <a href="#" class="portfolio-link">View Project</a>
-                        </div>
-                    </div>
-                    <div class="portfolio-info">
-                        <h3>Blog Platform</h3>
-                        <p>Content management system</p>
-                    </div>
-                </div>
+                <button class="testimonial-slider-btn testimonial-slider-btn-next" aria-label="Next testimonial">&#8594;</button>
             </div>
         </div>
     </section>
-
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Get In Touch</h2>
-                <p class="section-subtitle">Let's discuss your next project</p>
+                <h2 class="section-title">İletişim</h2>
+                <p class="section-subtitle">İhtiyalarınıza uygun ürünü seçelim</p>
             </div>
             <div class="contact-content">
                 <div class="contact-info">
                     <div class="contact-item">
                         <div class="contact-icon">📧</div>
                         <div>
-                            <h3>Email</h3>
+                            <h3>E-Mail</h3>
                             <p>info@ets.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">📱</div>
                         <div>
-                            <h3>Phone</h3>
+                            <h3>Telefon</h3>
                             <p>+1 (555) 123-4567</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">📍</div>
                         <div>
-                            <h3>Address</h3>
+                            <h3>Adres</h3>
                             <p>123 Web Street, Digital City</p>
                         </div>
                     </div>
                 </div>
-                <form class="contact-form" id="contactForm">
+                <!-- <form class="contact-form" id="contactForm">
                     <div class="form-group">
                         <input type="text" id="name" name="name" placeholder="Your Name" required>
                     </div>
@@ -345,30 +350,32 @@
                         <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
+                </form> -->
             </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
+        <div class="footer-background"></div>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>ETS</h3>
-                    <p>Creating exceptional digital experiences since 2020</p>
+                    <img src="https://www.winsa.com.tr/sitefile/images/logo.svg" alt="">
+                    <p>2020'den beri olağanüstü dijital deneyimler üretiyoruz</p>
                 </div>
                 <div class="footer-section">
-                    <h4>Quick Links</h4>
+                    <h4>Kısa Yollar</h4>
                     <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#home">Ana Sayfa</a></li>
+                        <li><a href="#about">Hakkımızda</a></li>
+                        <li><a href="#services">Hizmetler</a></li>
+                        <li><a href="#portfolio">Projeler</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>Follow Us</h4>
+                    <h4>Bizi Takip Edin</h4>
                     <div class="social-links">
                         <a href="#" aria-label="Facebook">Facebook</a>
                         <a href="#" aria-label="Twitter">Twitter</a>
@@ -378,7 +385,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 ETS. All rights reserved.</p>
+                <p>&copy; 2025 ETS. Tüm hakları saklıdır.</p>
             </div>
         </div>
     </footer>
