--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETS - Modern Web Solution</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
-                <div class="logo"><img id="logo_img" src="src/img/logo.jpg" alt="logo" srcset=""></div>
+                <div class="logo"><img id="logo_img" src="src/img/logo.png" alt="logo" srcset=""></div>
                 <ul class="nav-menu">
                     <li><a href="#home">Ana Sayfa</a></li>
                     <li><a href="#about">Hakkımızda</a></li>
@@ -147,20 +147,20 @@
                     <h2>PVC PENCERE KAPI SİSTEMLERİ</h2>
                     <div class="detail-grid">
                         <div class="detail-item">
-                            <h4>High Quality Materials</h4>
-                            <p>Premium PVC materials that ensure durability and long-lasting performance. Our windows and doors are designed to withstand harsh weather conditions.</p>
+                            <h4>Yüksek Kaliteli Malzemeler</h4>
+                            <p>Dayanıklılık ve uzun ömür için tasarlanmış, premium PVC malzemeler. Pencerelerimiz ve kapılarımız zorlu hava koşullarına dayanacak şekilde üretilmiştir.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Energy Efficient</h4>
-                            <p>Advanced insulation technology helps reduce energy costs by maintaining optimal indoor temperature throughout the year.</p>
+                            <h4>Enerji Verimliliği</h4>
+                            <p>Gelişmiş yalıtım teknolojisi sayesinde yıl boyunca ideal iç ortam sıcaklığını koruyarak enerji maliyetlerinden tasarruf etmenizi sağlar.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Custom Designs</h4>
-                            <p>Wide range of designs and sizes to match your architectural style and personal preferences.</p>
+                            <h4>Özel Tasarımlar</h4>
+                            <p>Mimari tarzınıza ve kişisel tercihinize uygun geniş tasarım ve boyut seçenekleri sunar.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Easy Maintenance</h4>
-                            <p>Low-maintenance PVC surfaces that are easy to clean and require minimal upkeep over the years.</p>
+                            <h4>Kolay Bakım</h4>
+                            <p>Temizlemesi kolay ve yıllarca minimum bakım gerektiren PVC yüzeyler.</p>
                         </div>
                     </div>
                 </div>
@@ -172,20 +172,20 @@
                     <h2>CAM BALKON</h2>
                     <div class="detail-grid">
                         <div class="detail-item">
-                            <h4>Premium Glass</h4>
-                            <p>High-quality tempered glass panels that provide excellent visibility while ensuring safety and durability.</p>
+                            <h4>Premium Cam</h4>
+                            <p>Mükemmel görünürlük ve güvenlik sağlayan yüksek kaliteli temperli cam paneller.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Weather Resistant</h4>
-                            <p>Designed to withstand all weather conditions, protecting your balcony space year-round.</p>
+                            <h4>Hava Şartlarına Dayanıklı</h4>
+                            <p>Tüm mevsim koşullarına dayanıklı olup balkonunuzu yıl boyunca korur.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Modern Design</h4>
-                            <p>Sleek, contemporary designs that enhance your home's aesthetic appeal and increase property value.</p>
+                            <h4>Modern Tasarım</h4>
+                            <p>Evinizin estetik değerini artıran şık ve çağdaş tasarımlar.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Professional Installation</h4>
-                            <p>Expert installation services ensuring perfect fit and optimal performance of your glass balcony system.</p>
+                            <h4>Profesyonel Montaj</h4>
+                            <p>Cam balkon sistemleriniz için mükemmel uyum ve yüksek performans sağlayan uzman montaj hizmeti.</p>
                         </div>
                     </div>
                 </div>
@@ -197,20 +197,20 @@
                     <h2>SİNEKLİK</h2>
                     <div class="detail-grid">
                         <div class="detail-item">
-                            <h4>Insect Protection</h4>
-                            <p>Fine mesh screens that effectively keep insects out while allowing fresh air to flow freely into your home.</p>
+                            <h4>Böcek Koruması</h4>
+                            <p>İnce file sayesinde böcekleri dışarıda tutarken temiz havanın içeri girmesine olanak tanır.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Durable Mesh</h4>
-                            <p>High-quality mesh materials that resist tearing and maintain their effectiveness over time.</p>
+                            <h4>Dayanıklı File</h4>
+                            <p>Zamanla yırtılmalara karşı dirençli, kaliteli file malzemesi ile üretilmiştir.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Easy Installation</h4>
-                            <p>Simple installation process that fits perfectly with your existing windows and doors.</p>
+                            <h4>Kolay Kurulum</h4>
+                            <p>Mevcut pencere ve kapılarınıza mükemmel uyum sağlayacak şekilde kolayca monte edilir.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Low Visibility</h4>
-                            <p>Nearly invisible mesh that doesn't obstruct your view while providing excellent protection.</p>
+                            <h4>Düşük Görünürlük</h4>
+                            <p>Görüşünüzü engellemeyen neredeyse görünmez file ile mükemmel koruma.</p>
                         </div>
                     </div>
                 </div>
@@ -222,20 +222,20 @@
                     <h2>DUŞ VE KÜVET SİSTEMLERİ</h2>
                     <div class="detail-grid">
                         <div class="detail-item">
-                            <h4>Luxury Design</h4>
-                            <p>Premium shower and bathtub systems featuring modern designs and high-end materials for a spa-like experience.</p>
+                            <h4>Lüks Tasarım</h4>
+                            <p>Modern çizgiler ve yüksek kaliteli malzeme ile spa deneyimi sunan duş ve küvet sistemleri.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Multiple Features</h4>
-                            <p>Advanced features including body jets, rainfall showerheads, and temperature control systems.</p>
+                            <h4>Çoklu Fonksiyonlar</h4>
+                            <p>Vücut jetleri, yağmurlama başlıkları ve gelişmiş ısı kontrol sistemleri gibi özelliklerle donatılmıştır.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Easy Cleaning</h4>
-                            <p>Non-porous surfaces and smart design features that make cleaning and maintenance effortless.</p>
+                            <h4>Kolay Temizlik</h4>
+                            <p>Gözeneksiz yüzeyler ve akıllı tasarım sayesinde temizlik ve bakım işlemleri oldukça kolaydır.</p>
                         </div>
                         <div class="detail-item">
-                            <h4>Custom Solutions</h4>
-                            <p>Tailored solutions to fit any bathroom size and layout, maximizing your space efficiently.</p>
+                            <h4>Özel Çözümler</h4>
+                            <p>Her banyoya uygun ölçü ve düzenle, alanı maksimum verimle kullanmanızı sağlar.</p>
                         </div>
                     </div>
                 </div>
@@ -361,9 +361,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>ETS</h3>
+                    <div class="logo"><img id="logo_img" src="src/img/logo.png" alt="logo" srcset=""></div>
                     <img src="https://www.winsa.com.tr/sitefile/images/logo.svg" alt="">
-                    <p>2020'den beri olağanüstü dijital deneyimler üretiyoruz</p>
+                    <p>yazı yazı yazı</p>
                 </div>
                 <div class="footer-section">
                     <h4>Kısa Yollar</h4>
@@ -390,7 +390,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
 
