--- a/index.html
+++ b/index.html
@@ -265,40 +265,40 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Referanslarımız</h2>
-                <p class="section-subtitle">yazı yazı</p>
+                <p class="section-subtitle">Sektördeki en iyi referanslarımız</p>
             </div>
             <div class="testimonial-slider-wrapper">
                 <button class="testimonial-slider-btn testimonial-slider-btn-prev" aria-label="Previous testimonial">&#8592;</button>
                 <div class="testimonials-grid testimonial-slider">
                     <div class="testimonial-item">
-                        <img src="uploads/thumb_692c249fd5cbeScreenshot_1.png" alt="Company 1" class="testimonial-img">
-                        <h3 class="testimonial-name">Alpha Construction</h3>
-                        <p class="testimonial-text">"Modern Web Solutions exceeded our expectations on every level. We love our new website!"</p>
+                        <img src="src/img/urundu.avif" alt="Company 1" class="testimonial-img">
+                        <h3 class="testimonial-name">Üründü İnşaat</h3>
+                        <p class="testimonial-text">"Cam balkon uygulamalarında gösterdikleri titizlik ve uyumlu çalışma ile projelerimize değer kattılar."</p>
                     </div>
                     <div class="testimonial-item">
-                        <img src="uploads/thumb_692c24eb8f90bScreenshot_1.png" alt="Company 2" class="testimonial-img">
-                        <h3 class="testimonial-name">Beta Interiors</h3>
-                        <p class="testimonial-text">"Professional, creative, and highly responsive. Our online presence has never looked better."</p>
+                        <img src="src/img/her.png" alt="Company 2" class="testimonial-img">
+                        <h3 class="testimonial-name">Her İnşaat</h3>
+                        <p class="testimonial-text">"PVC doğrama işlerinde kaliteli malzeme ve hızlı teslimatla her seferinde beklentilerimizi karşıladılar."</p>
                     </div>
                     <div class="testimonial-item">
-                        <img src="uploads/thumb_692c25d84ae86Screenshot_1.png" alt="Company 3" class="testimonial-img">
-                        <h3 class="testimonial-name">Gamma Windows</h3>
-                        <p class="testimonial-text">"Their work helped us attract new clients. Fast turn-around and impressive design."</p>
+                        <img src="src/img/celik.png" alt="Company 3" class="testimonial-img">
+                        <h3 class="testimonial-name">Çelik Yapı İnşaat</h3>
+                        <p class="testimonial-text">"Sineklik montajlarında güvenilir ve pratik çözümleriyle konut projelerimizde tercih ettiğimiz bir firma oldular."</p>
                     </div>
                     <div class="testimonial-item">
-                        <img src="uploads/thumb_692c25da27529Screenshot_1.png" alt="Company 4" class="testimonial-img">
-                        <h3 class="testimonial-name">Delta Roofing</h3>
-                        <p class="testimonial-text">"Very efficient and delivered a beautiful product within days. Highly recommend."</p>
+                        <img src="src/img/p.jpg" alt="Company 4" class="testimonial-img">
+                        <h3 class="testimonial-name">Pozitif Mimarlık</h3>
+                        <p class="testimonial-text">"Duşakabin kurulumlarını planlanan süre içerisinde tamamlayarak projelerimizin zamanında teslim edilmesine katkı sağladılar."</p>
                     </div>
                     <div class="testimonial-item">
-                        <img src="uploads/thumb_692c25dc014b9Screenshot_1.png" alt="Company 5" class="testimonial-img">
-                        <h3 class="testimonial-name">Epsilon Doors</h3>
-                        <p class="testimonial-text">"User-friendly site, great collaboration, and beautiful design. Thank you!"</p>
+                        <img src="src/img/moda.png" alt="Company 5" class="testimonial-img">
+                        <h3 class="testimonial-name">Moda Kentsel Dönüşüm</h3>
+                        <p class="testimonial-text">"Projelerimizin tüm cam balkon ve PVC doğrama ihtiyaçlarına eksiksiz yanıt vererek mükemmel bir işbirliği sundular."</p>
                     </div>
                     <div class="testimonial-item">
-                        <img src="uploads/thumb_692c25ddd9048Screenshot_1.png" alt="Company 6" class="testimonial-img">
-                        <h3 class="testimonial-name">Zeta Glass</h3>
-                        <p class="testimonial-text">"Impressive service and a stunning online showcase for our gallery."</p>
+                        <img src="src/img/android-icon-192x192.png" alt="Company 6" class="testimonial-img">
+                        <h3 class="testimonial-name">Çakır Inşaat Mimarlık</h3>
+                        <p class="testimonial-text">"İnşaat projelerimizde gösterdikleri profesyonel yaklaşım ve kaliteli işçilikle uzun süreli bir çözüm ortağımız oldular."</p>
                     </div>
                 </div>
                 <button class="testimonial-slider-btn testimonial-slider-btn-next" aria-label="Next testimonial">&#8594;</button>
